# ocv_demos

./: Cargo.toml  README.md  test.py
docker/: Dockerfile
images/: octave-workspace
src/: cameras.rs  centroid.rs  main.rs
src/cameras/: cameras.rs
src/centroid/: centroid.rs
src/cli/: config.rs  mod.rs
src/filter/: img_filter.rs  mod.rs
src/harris/: harris.rs  mod.rs
