[package]
name = "opencv_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
opencv = "0.60"
# opencv = {version = "0.57.0", default-features = false }
log = "0.4"
env_logger = "0.9"


[profile.release]
debug=true
opt-level = 1
#lto = true
panic = 'unwind'